--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,22 +1095,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definiera parametergrid, för DecisionTreeClassifier\n",
-    "param_grid_dt = {\n",
-    "    'max_depth': [3, 5, 10],  # Maxdjup för trädet\n",
-    "    'min_samples_split': [2, 5, 10],  # Minsta antal sampel för att dela en nod\n",
-    "    'min_samples_leaf': [1, 2, 4]  # Minsta antal sampel i ett löv\n",
+    "# Definiera parametergrid för RandomForest\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [30, 50, 100],  # Antal träd i skogen\n",
+    "    'max_depth': [5, 8, 10],  # Maxdjup för varje träd\n",
+    "    'min_samples_split': [10, 15, 20],  # Minsta antal sampel för att dela en nod\n",
+    "    'min_samples_leaf': [2, 3, 4, 5]  # Minsta antal sampel i ett löv\n",
     "}\n",
     "\n",
     "# Definiera parametergrid, för LogisticRegression\n",
     "param_grid_lr = {\n",
-    "    'C': [0.01, 0.1, 1, 10], #Regulariseringsstyrka\n",
+    "    'C': [0.001, 0.01, 0.1, 1, 10, 100], #Regulariseringsstyrka\n",
     "    'penalty': ['l1', 'l2'], # Strafftyp\n",
-    "    'solver': ['liblinear'] # Optimering\n",
+    "    'solver': ['saga'] # Optimeringsteknik\n",
     "}\n",
     "\n",
     "# Definiera parametergrid för GradienBoostingClassifier\n",
@@ -1143,56 +1144,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "# Skapa modell\n",
-    "dt_model = DecisionTreeClassifier(random_state=42)\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Skapa modell för RandomForestClassifier:\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "# Träna och utvärdera DecisionTreeClassifier på df1 - Standardization\n",
-    "best_dt_model_df1, best_dt_params_df1, dt_metrics_df1 = perform_grid_search(\n",
-    "    model=dt_model,\n",
-    "    param_grid=param_grid_dt,\n",
+    "# Träna och utvärdera RandomForest på df1 - Standardization\n",
+    "best_rf_model_df1, best_rf_params_df1, rf_metrics_df1 = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
     "    X_train=X1_train_standard,\n",
     "    y_train=y1_train,\n",
     "    X_val=X1_val_standard,\n",
     "    y_val=y1_val,\n",
-    "    model_name=\"Decision Tree Standardization (df1)\"\n",
+    "    model_name=\"Random Forest Standardization (df1)\"\n",
     ")\n",
     "\n",
-    "# Träna och utvärdera DecisionTreeClassifier på df2 - Standardization\n",
-    "best_dt_model_df2, best_dt_params_df2, dt_metrics_df2 = perform_grid_search(\n",
-    "    model=dt_model,\n",
-    "    param_grid=param_grid_dt,\n",
+    "# Träna och utvärdera RandomForest på df2 - Standardization\n",
+    "best_rf_model_df2, best_rf_params_df2, rf_metrics_df2 = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
     "    X_train=X2_train_standard,\n",
     "    y_train=y2_train,\n",
     "    X_val=X2_val_standard,\n",
     "    y_val=y2_val,\n",
-    "    model_name=\"Decision Tree Standardization (df2)\"\n",
+    "    model_name=\"Random Forest Standardization (df2)\"\n",
     ")\n",
     "\n",
-    "# Träna och utvärdera DecisionTreeClassifier på df1 - Normalization\n",
-    "best_dt_model_df1_minmax, best_dt_params_df1_minmax, dt_metrics_df1_minmax = perform_grid_search(\n",
-    "    model=dt_model,\n",
-    "    param_grid=param_grid_dt,\n",
+    "# Träna och utvärdera RandomForest på df1 - Normalization\n",
+    "best_rf_model_df1_minmax, best_rf_params_df1_minmax, rf_metrics_df1_minmax = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
     "    X_train=X1_train_minmax,\n",
     "    y_train=y1_train,\n",
     "    X_val=X1_val_minmax,\n",
     "    y_val=y1_val,\n",
-    "    model_name=\"Decision Tree Normalization (df1)\"\n",
+    "    model_name=\"Random Forest Normalization (df1)\"\n",
     ")\n",
     "\n",
-    "# Träna och utvärdera DecisionTreeClassifier på df2 - Normalization\n",
-    "best_dt_model_df2_minmax, best_dt_params_df2_minmax, dt_metrics_df2_minmax = perform_grid_search(\n",
-    "    model=dt_model,\n",
-    "    param_grid=param_grid_dt,\n",
+    "# Träna och utvärdera RandomForest på df2 - Normalization\n",
+    "best_rf_model_df2_minmax, best_rf_params_df2_minmax, rf_metrics_df2_minmax = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
     "    X_train=X2_train_minmax,\n",
     "    y_train=y2_train,\n",
     "    X_val=X2_val_minmax,\n",
     "    y_val=y2_val,\n",
-    "    model_name=\"Decision Tree Normalization (df2)\"\n",
+    "    model_name=\"Random Forest Normalization (df2)\"\n",
     ")\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -1342,67 +1343,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultat för Decision Tree på standardiserad data (df1):\n",
-      "Bästa parametrar: {'max_depth': 5, 'min_samples_leaf': 4, 'min_samples_split': 10}\n",
-      "Noggrannhet: 0.6995620437956205\n",
-      "Precision: 0.7560600230858022\n",
-      "Recall: 0.5798170551785188\n",
-      "F1-poäng: 0.656312625250501\n",
+      "Resultat för RandomForest på standardiserad data (df1):\n",
+      "Bästa parametrar: {'max_depth': 8, 'min_samples_leaf': 3, 'min_samples_split': 10, 'n_estimators': 100}\n",
+      "Noggrannhet: 0.7067153284671532\n",
+      "Precision: 0.7344546381243628\n",
+      "Recall: 0.6377987606963706\n",
+      "F1-poäng: 0.6827226784586229\n",
       "\n",
-      "Resultat för Decision Tree på standardiserad data (df2):\n",
-      "Bästa parametrar: {'max_depth': 5, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
-      "Noggrannhet: 0.7373722627737226\n",
-      "Precision: 0.7627230667547918\n",
-      "Recall: 0.6810268515786367\n",
-      "F1-poäng: 0.7195635229929852\n",
+      "Resultat för RandomForest på standardiserad data (df2):\n",
+      "Bästa parametrar: {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 15, 'n_estimators': 100}\n",
+      "Noggrannhet: 0.7411678832116788\n",
+      "Precision: 0.7648312028843002\n",
+      "Recall: 0.6885511950427855\n",
+      "F1-poäng: 0.7246894409937888\n",
+      "Resultat för RandomForest på normaliserad data (df1):\n",
+      "Bästa parametrar: {'max_depth': 8, 'min_samples_leaf': 3, 'min_samples_split': 10, 'n_estimators': 100}\n",
+      "Noggrannhet: 0.7067153284671532\n",
+      "Precision: 0.7344546381243628\n",
+      "Recall: 0.6377987606963706\n",
+      "F1-poäng: 0.6827226784586229\n",
       "\n",
-      "Resultat för Decision Tree på normaliserad data (df1):\n",
-      "Bästa parametrar: {'max_depth': 5, 'min_samples_leaf': 4, 'min_samples_split': 10}\n",
-      "Noggrannhet: 0.6995620437956205\n",
-      "Precision: 0.7560600230858022\n",
-      "Recall: 0.5798170551785188\n",
-      "F1-poäng: 0.656312625250501\n",
-      "\n",
-      "Resultat för Decision Tree på normaliserad data (df2):\n",
-      "Bästa parametrar: {'max_depth': 5, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
-      "Noggrannhet: 0.7373722627737226\n",
-      "Precision: 0.7627230667547918\n",
-      "Recall: 0.6810268515786367\n",
-      "F1-poäng: 0.7195635229929852\n",
+      "Resultat för RandomForest på normaliserad data (df2):\n",
+      "Bästa parametrar: {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 15, 'n_estimators': 100}\n",
+      "Noggrannhet: 0.7413138686131386\n",
+      "Precision: 0.7649950835791544\n",
+      "Recall: 0.6886987311891414\n",
+      "F1-poäng: 0.7248447204968944\n",
       "Resultat för Logistic Regression på standardiserad data (df1):\n",
-      "Bästa parametrar: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n",
-      "Noggrannhet: 0.7094160583941606\n",
-      "Precision: 0.7354773530897457\n",
-      "Recall: 0.6444378872823842\n",
-      "F1-poäng: 0.6869544703939608\n",
+      "Bästa parametrar: {'C': 0.01, 'penalty': 'l1', 'solver': 'saga'}\n",
+      "Noggrannhet: 0.7096350364963504\n",
+      "Precision: 0.7378525314305131\n",
+      "Recall: 0.6407494836234877\n",
+      "F1-poäng: 0.6858812381554011\n",
       "\n",
       "Resultat för Logistic Regression på standardiserad data (df2):\n",
-      "Bästa parametrar: {'C': 1, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "Bästa parametrar: {'C': 1, 'penalty': 'l2', 'solver': 'saga'}\n",
       "Noggrannhet: 0.7359124087591241\n",
       "Precision: 0.7608121492241664\n",
       "Recall: 0.6799940985541457\n",
       "F1-poäng: 0.7181364911187286\n",
       "\n",
       "Resultat för Logistic Regression på normaliserad data (df1):\n",
-      "Bästa parametrar: {'C': 0.1, 'penalty': 'l1', 'solver': 'liblinear'}\n",
-      "Noggrannhet: 0.7087591240875912\n",
-      "Precision: 0.7355525515376816\n",
-      "Recall: 0.6422248450870464\n",
-      "F1-poäng: 0.6857277882797732\n",
+      "Bästa parametrar: {'C': 0.1, 'penalty': 'l1', 'solver': 'saga'}\n",
+      "Noggrannhet: 0.7091970802919708\n",
+      "Precision: 0.735422986181328\n",
+      "Recall: 0.6438477426969608\n",
+      "F1-poäng: 0.6865953429830082\n",
       "\n",
       "Resultat för Logistic Regression på normaliserad data (df2):\n",
-      "Bästa parametrar: {'C': 10, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "Bästa parametrar: {'C': 100, 'penalty': 'l2', 'solver': 'saga'}\n",
       "Noggrannhet: 0.7359124087591241\n",
-      "Precision: 0.7608121492241664\n",
-      "Recall: 0.6799940985541457\n",
-      "F1-poäng: 0.7181364911187286\n",
+      "Precision: 0.7607260726072608\n",
+      "Recall: 0.6801416347005016\n",
+      "F1-poäng: 0.718180401931765\n",
       "Resultat för Gradient Boosting på standardiserad data (df1):\n",
       "Bästa parametrar: {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
       "Noggrannhet: 0.7081021897810219\n",
@@ -1461,33 +1461,37 @@
     }
    ],
    "source": [
-    "print(\"Resultat för Decision Tree på standardiserad data (df1):\")\n",
-    "print(f\"Bästa parametrar: {best_dt_params_df1}\")\n",
-    "print(f\"Noggrannhet: {dt_metrics_df1['accuracy']}\")\n",
-    "print(f\"Precision: {dt_metrics_df1['precision']}\")\n",
-    "print(f\"Recall: {dt_metrics_df1['recall']}\")\n",
-    "print(f\"F1-poäng: {dt_metrics_df1['f1_score']}\")\n",
+    "# Skriv ut resultaten för df1\n",
+    "print(\"Resultat för RandomForest på standardiserad data (df1):\")\n",
+    "print(f\"Bästa parametrar: {best_rf_params_df1}\")\n",
+    "print(f\"Noggrannhet: {rf_metrics_df1['accuracy']}\")\n",
+    "print(f\"Precision: {rf_metrics_df1['precision']}\")\n",
+    "print(f\"Recall: {rf_metrics_df1['recall']}\")\n",
+    "print(f\"F1-poäng: {rf_metrics_df1['f1_score']}\")\n",
     "\n",
-    "print(\"\\nResultat för Decision Tree på standardiserad data (df2):\")\n",
-    "print(f\"Bästa parametrar: {best_dt_params_df2}\")\n",
-    "print(f\"Noggrannhet: {dt_metrics_df2['accuracy']}\")\n",
-    "print(f\"Precision: {dt_metrics_df2['precision']}\")\n",
-    "print(f\"Recall: {dt_metrics_df2['recall']}\")\n",
-    "print(f\"F1-poäng: {dt_metrics_df2['f1_score']}\")\n",
+    "# Skriv ut resultaten för df2\n",
+    "print(\"\\nResultat för RandomForest på standardiserad data (df2):\")\n",
+    "print(f\"Bästa parametrar: {best_rf_params_df2}\")\n",
+    "print(f\"Noggrannhet: {rf_metrics_df2['accuracy']}\")\n",
+    "print(f\"Precision: {rf_metrics_df2['precision']}\")\n",
+    "print(f\"Recall: {rf_metrics_df2['recall']}\")\n",
+    "print(f\"F1-poäng: {rf_metrics_df2['f1_score']}\")\n",
     "\n",
-    "print(\"\\nResultat för Decision Tree på normaliserad data (df1):\")\n",
-    "print(f\"Bästa parametrar: {best_dt_params_df1_minmax}\")\n",
-    "print(f\"Noggrannhet: {dt_metrics_df1_minmax['accuracy']}\")\n",
-    "print(f\"Precision: {dt_metrics_df1_minmax['precision']}\")\n",
-    "print(f\"Recall: {dt_metrics_df1_minmax['recall']}\")\n",
-    "print(f\"F1-poäng: {dt_metrics_df1_minmax['f1_score']}\")\n",
+    "# Skriv ut resultaten för df1 - Normalization\n",
+    "print(\"Resultat för RandomForest på normaliserad data (df1):\")\n",
+    "print(f\"Bästa parametrar: {best_rf_params_df1_minmax}\")\n",
+    "print(f\"Noggrannhet: {rf_metrics_df1_minmax['accuracy']}\")\n",
+    "print(f\"Precision: {rf_metrics_df1_minmax['precision']}\")\n",
+    "print(f\"Recall: {rf_metrics_df1_minmax['recall']}\")\n",
+    "print(f\"F1-poäng: {rf_metrics_df1_minmax['f1_score']}\")\n",
     "\n",
-    "print(\"\\nResultat för Decision Tree på normaliserad data (df2):\")\n",
-    "print(f\"Bästa parametrar: {best_dt_params_df2_minmax}\")\n",
-    "print(f\"Noggrannhet: {dt_metrics_df2_minmax['accuracy']}\")\n",
-    "print(f\"Precision: {dt_metrics_df2_minmax['precision']}\")\n",
-    "print(f\"Recall: {dt_metrics_df2_minmax['recall']}\")\n",
-    "print(f\"F1-poäng: {dt_metrics_df2_minmax['f1_score']}\")\n",
+    "# Skriv ut resultaten för df2\n",
+    "print(\"\\nResultat för RandomForest på normaliserad data (df2):\")\n",
+    "print(f\"Bästa parametrar: {best_rf_params_df2_minmax}\")\n",
+    "print(f\"Noggrannhet: {rf_metrics_df2_minmax['accuracy']}\")\n",
+    "print(f\"Precision: {rf_metrics_df2_minmax['precision']}\")\n",
+    "print(f\"Recall: {rf_metrics_df2_minmax['recall']}\")\n",
+    "print(f\"F1-poäng: {rf_metrics_df2_minmax['f1_score']}\")\n",
     "\n",
     "print(\"Resultat för Logistic Regression på standardiserad data (df1):\")\n",
     "print(f\"Bästa parametrar: {best_lr_params_df1}\")\n",
