--- a/Lektion/kod_snuttar_labb.ipynb
+++ b/Lektion/kod_snuttar_labb.ipynb
@@ -370,60 +370,120 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definiera parametergrid för RandomForest\n",
-    "param_grid_rf = {\n",
-    "    'n_estimators': [10, 20, 30], # Antal träd i skogen\n",
-    "    'max_depth': [None, 10, 20, 30], # Maxdjup för varje träd, (None: träden växer tills alla blad är rena.)\n",
-    "    'min_samples_split': [2, 5, 10] # Minsta antal sampel som krävs.\n",
+    "# Definiera parametergrid, för DecisionTreeClassifier\n",
+    "param_grid_dt = {\n",
+    "    'max_depth': [3, 5, 10],  # Maxdjup för trädet\n",
+    "    'min_samples_split': [2, 5, 10],  # Minsta antal sampel för att dela en nod\n",
+    "    'min_samples_leaf': [1, 2, 4]  # Minsta antal sampel i ett löv\n",
     "}\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "# Skapa modell för RandomForestClassifier:\n",
-    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "# Skapa modell\n",
+    "dt_model = DecisionTreeClassifier(random_state=42)\n",
     "\n",
-    "# Träna och utvärdera RandomForest på df1 - Standardization\n",
-    "best_rf_model_df1, best_rf_params_df1, rf_metrics_df1 = perform_grid_search(\n",
-    "    model=rf_model,\n",
-    "    param_grid=param_grid_rf,\n",
+    "# Träna och utvärdera DecisionTreeClassifier på df1 - Standardization\n",
+    "best_dt_model_df1, best_dt_params_df1, dt_metrics_df1 = perform_grid_search(\n",
+    "    model=dt_model,\n",
+    "    param_grid=param_grid_dt,\n",
     "    X_train=X1_train_standard,\n",
     "    y_train=y1_train,\n",
     "    X_val=X1_val_standard,\n",
     "    y_val=y1_val,\n",
-    "    model_name=\"Random Forest Standardization (df1)\"\n",
+    "    model_name=\"Decision Tree Standardization (df1)\"\n",
     ")\n",
     "\n",
-    "# Träna och utvärdera RandomForest på df2 - Standardization\n",
-    "best_rf_model_df2, best_rf_params_df2, rf_metrics_df2 = perform_grid_search(\n",
-    "    model=rf_model,\n",
-    "    param_grid=param_grid_rf,\n",
+    "# Träna och utvärdera DecisionTreeClassifier på df2 - Standardization\n",
+    "best_dt_model_df2, best_dt_params_df2, dt_metrics_df2 = perform_grid_search(\n",
+    "    model=dt_model,\n",
+    "    param_grid=param_grid_dt,\n",
     "    X_train=X2_train_standard,\n",
     "    y_train=y2_train,\n",
     "    X_val=X2_val_standard,\n",
     "    y_val=y2_val,\n",
-    "    model_name=\"Random Forest Standardization (df2)\"\n",
+    "    model_name=\"Decision Tree Standardization (df2)\"\n",
     ")\n",
     "\n",
-    "# Träna och utvärdera RandomForest på df1 - Normalization\n",
-    "best_rf_model_df1_minmax, best_rf_params_df1_minmax, rf_metrics_df1_minmax = perform_grid_search(\n",
-    "    model=rf_model,\n",
-    "    param_grid=param_grid_rf,\n",
+    "# Träna och utvärdera DecisionTreeClassifier på df1 - Normalization\n",
+    "best_dt_model_df1_minmax, best_dt_params_df1_minmax, dt_metrics_df1_minmax = perform_grid_search(\n",
+    "    model=dt_model,\n",
+    "    param_grid=param_grid_dt,\n",
     "    X_train=X1_train_minmax,\n",
     "    y_train=y1_train,\n",
     "    X_val=X1_val_minmax,\n",
     "    y_val=y1_val,\n",
-    "    model_name=\"Random Forest Normalization (df1)\"\n",
+    "    model_name=\"Decision Tree Normalization (df1)\"\n",
     ")\n",
     "\n",
-    "# Träna och utvärdera RandomForest på df2 - Normalization\n",
-    "best_rf_model_df2_minmax, best_rf_params_df2_minmax, rf_metrics_df2_minmax = perform_grid_search(\n",
-    "    model=rf_model,\n",
-    "    param_grid=param_grid_rf,\n",
+    "# Träna och utvärdera DecisionTreeClassifier på df2 - Normalization\n",
+    "best_dt_model_df2_minmax, best_dt_params_df2_minmax, dt_metrics_df2_minmax = perform_grid_search(\n",
+    "    model=dt_model,\n",
+    "    param_grid=param_grid_dt,\n",
     "    X_train=X2_train_minmax,\n",
     "    y_train=y2_train,\n",
     "    X_val=X2_val_minmax,\n",
     "    y_val=y2_val,\n",
-    "    model_name=\"Random Forest Normalization (df2)\"\n",
+    "    model_name=\"Decision Tree Normalization (df2)\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Resultat för Decision Tree på standardiserad data (df1):\")\n",
+    "print(f\"Bästa parametrar: {best_dt_params_df1}\")\n",
+    "print(f\"Noggrannhet: {dt_metrics_df1['accuracy']}\")\n",
+    "print(f\"Precision: {dt_metrics_df1['precision']}\")\n",
+    "print(f\"Recall: {dt_metrics_df1['recall']}\")\n",
+    "print(f\"F1-poäng: {dt_metrics_df1['f1_score']}\")\n",
+    "\n",
+    "print(\"\\nResultat för Decision Tree på standardiserad data (df2):\")\n",
+    "print(f\"Bästa parametrar: {best_dt_params_df2}\")\n",
+    "print(f\"Noggrannhet: {dt_metrics_df2['accuracy']}\")\n",
+    "print(f\"Precision: {dt_metrics_df2['precision']}\")\n",
+    "print(f\"Recall: {dt_metrics_df2['recall']}\")\n",
+    "print(f\"F1-poäng: {dt_metrics_df2['f1_score']}\")\n",
+    "\n",
+    "print(\"\\nResultat för Decision Tree på normaliserad data (df1):\")\n",
+    "print(f\"Bästa parametrar: {best_dt_params_df1_minmax}\")\n",
+    "print(f\"Noggrannhet: {dt_metrics_df1_minmax['accuracy']}\")\n",
+    "print(f\"Precision: {dt_metrics_df1_minmax['precision']}\")\n",
+    "print(f\"Recall: {dt_metrics_df1_minmax['recall']}\")\n",
+    "print(f\"F1-poäng: {dt_metrics_df1_minmax['f1_score']}\")\n",
+    "\n",
+    "print(\"\\nResultat för Decision Tree på normaliserad data (df2):\")\n",
+    "print(f\"Bästa parametrar: {best_dt_params_df2_minmax}\")\n",
+    "print(f\"Noggrannhet: {dt_metrics_df2_minmax['accuracy']}\")\n",
+    "print(f\"Precision: {dt_metrics_df2_minmax['precision']}\")\n",
+    "print(f\"Recall: {dt_metrics_df2_minmax['recall']}\")\n",
+    "print(f\"F1-poäng: {dt_metrics_df2_minmax['f1_score']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hur jag hade det från början innan nya testet:\n",
+    "\n",
+    "# Definiera parametergrid för RandomForest\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [10, 20, 30], # Antal träd i skogen\n",
+    "    'max_depth': [5, 10, 20], # Maxdjup för varje träd.\n",
+    "    'min_samples_split': [2, 5, 10, 15], # Minsta antal sampel för att dela en nod\n",
+    "    'min_samples_leaf': [1, 2, 4] # Minsta antal sampel i ett löv\n",
+    "}\n",
+    "\n",
+    "# Definiera parametergrid, för LogisticRegression\n",
+    "param_grid_lr = {\n",
+    "    'C': [0.01, 0.1, 1, 10], #Regulariseringsstyrka\n",
+    "    'penalty': ['l1', 'l2'], # Strafftyp\n",
+    "    'solver': ['saga'] # Optimeringsteknik\n",
+    "}\n",
+    "\n"
    ]
   }
  ],
@@ -434,7 +494,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.6"
   }
  },
