update sparade resultat med ny csv fil

--- a/Lektion/kod_snuttar_labb.ipynb
+++ b/Lektion/kod_snuttar_labb.ipynb
@@ -485,6 +485,111 @@
     "}\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import pandas as pd \n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# Skapar en funktion för att utföra GridsearchCV\n",
+    "def perform_grid_search(model, param_grid, X_train, y_train, X_val, y_val, X_test, y_test, model_name, cv=5, scoring='accuracy', save_results=False, filename='model_results.csv'):\n",
+    "    \"\"\"\n",
+    "    Utför GridSearchCV för en given modell och parametergrid, tränar modellen,\n",
+    "    gör förutsägelser på valideringsdata och beräknar utvärderingsmått.\n",
+    "    \n",
+    "    :param model: Maskininlärningsmodellen (t.ex. RandomForestClassifier).\n",
+    "    :param param_grid: Dictionary med hyperparametrar att testa.\n",
+    "    :param X_train: Träningsdata (features).\n",
+    "    :param y_train: Träningsdata (target).\n",
+    "    :param X_val: Valideringsdata (features).\n",
+    "    :param y_val: Valideringsdata (target).\n",
+    "    :param X_test: Testdata (features).\n",
+    "    :param y_test: Testdata (target).\n",
+    "    :param cv: Antal folds för korsvalidering (default: 5).\n",
+    "    :param scoring: Mätvärde för att välja bästa modell (default: 'accuracy').\n",
+    "    :param save_results: Om True, spara resultaten till en CSV-fil (default: False).\n",
+    "    :param filename: Namnet på CSV-filen (default: 'model_results.csv').\n",
+    "    :return: Den bästa modellen, dess parametrar och utvärderingsmått.\n",
+    "    \"\"\"\n",
+    "    # Utför GridSearchCV\n",
+    "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=cv, scoring=scoring)\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Hämta den bästa modellen och dess parametrar\n",
+    "    best_model = grid_search.best_estimator_\n",
+    "    best_params = grid_search.best_params_\n",
+    "    \n",
+    "    # Gör förutsägelser på valideringsdata\n",
+    "    y_val_pred = best_model.predict(X_val)\n",
+    "    y_test_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    # Beräkna utvärderingsmått\n",
+    "    val_accuracy = accuracy_score(y_val, y_val_pred)\n",
+    "    val_precision = precision_score(y_val, y_val_pred)\n",
+    "    val_recall = recall_score(y_val, y_val_pred)\n",
+    "    val_f1 = f1_score(y_val, y_val_pred)\n",
+    "    \n",
+    "    test_accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "    test_precision = precision_score(y_test, y_test_pred)\n",
+    "    test_recall = recall_score(y_test, y_test_pred)\n",
+    "    test_f1 = f1_score(y_test, y_test_pred)\n",
+    "    \n",
+    "    # Skapa resultaten\n",
+    "    evaluation_metrics = {\n",
+    "        'val_accuracy': val_accuracy,\n",
+    "        'val_precision': val_precision,\n",
+    "        'val_recall': val_recall,\n",
+    "        'val_f1': val_f1,\n",
+    "        'test_accuracy': test_accuracy,\n",
+    "        'test_precision': test_precision,\n",
+    "        'test_recall': test_recall,\n",
+    "        'test_f1': test_f1\n",
+    "    }\n",
+    "    \n",
+    "    # Spara resultaten om save_results är True\n",
+    "    if save_results:\n",
+    "        results = {\n",
+    "            'Model': [model_name],\n",
+    "            'Best Parameters': [str(best_params)],\n",
+    "            'Validation Accuracy': [val_accuracy],\n",
+    "            'Test Accuracy': [test_accuracy],\n",
+    "            'Validation Precision': [val_precision],\n",
+    "            'Test Precision': [test_precision],\n",
+    "            'Validation Recall': [val_recall],\n",
+    "            'Test Recall': [test_recall],\n",
+    "            'Validation F1': [val_f1],\n",
+    "            'Test F1': [test_f1]\n",
+    "        }\n",
+    "        results_df = pd.DataFrame(results)\n",
+    "\n",
+    "        # Kontrollera om filen redan finns\n",
+    "        if os.path.exists(filename):\n",
+    "            existing_df = pd.read_csv(filename)\n",
+    "            # Kontrollera om modellen redan finns i filen\n",
+    "            if model_name not in existing_df['Model'].values:\n",
+    "                # Lägg till nya resultat om modellen inte redan finns\n",
+    "                results_df.to_csv(filename, mode='a', header=False, index=False)\n",
+    "                print(f\"Nya resultat för '{model_name}' sparades i {filename}.\")\n",
+    "            else:\n",
+    "                print(f\"Modellen '{model_name}' finns redan i filen. Inga nya resultat sparades.\")\n",
+    "        else:\n",
+    "            # Skapa en ny fil om den inte finns\n",
+    "            results_df.to_csv(filename, mode='w', header=True, index=False)\n",
+    "            print(f\"Ny fil skapad: {filename}\")\n",
+    "    \n",
+    "    return best_model, best_params, evaluation_metrics"
+   ]
   }
  ],
  "metadata": {
