--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -1106,9 +1106,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bästa parametrar för: Random Forest Normalization (df1): {'max_depth': 8, 'min_samples_leaf': 5, 'min_samples_split': 15, 'n_estimators': 10}\n",
+      "Ny fil skapad: model_results.csv\n",
+      "Bästa parametrar för: Random Forest Normalization (df2): {'max_depth': 10, 'min_samples_leaf': 4, 'min_samples_split': 10, 'n_estimators': 30}\n",
+      "Nya resultat för 'Random Forest Normalization (df2)' sparades i model_results.csv.\n",
+      "Bästa parametrar för: Logistic Regression Normalization (df1): {'C': 0.1, 'penalty': 'l1', 'solver': 'saga'}\n",
+      "Nya resultat för 'Logistic Regression Normalization (df1)' sparades i model_results.csv.\n",
+      "Bästa parametrar för: Logistic Regression Normalization (df2): {'C': 100, 'penalty': 'l2', 'solver': 'saga'}\n",
+      "Nya resultat för 'Logistic Regression Normalization (df2)' sparades i model_results.csv.\n",
+      "Bästa parametrar för: Gradient Boosting Normalization (df1): {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
+      "Nya resultat för 'Gradient Boosting Normalization (df1)' sparades i model_results.csv.\n",
+      "Bästa parametrar för: Gradient Boosting Normalization (df2): {'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 30}\n",
+      "Nya resultat för 'Gradient Boosting Normalization (df2)' sparades i model_results.csv.\n",
+      "Bästa parametrar för: KNN Normalization (df1): {'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n",
+      "Nya resultat för 'KNN Normalization (df1)' sparades i model_results.csv.\n",
+      "Bästa parametrar för: KNN Normalization (df2): {'n_neighbors': 9, 'p': 1, 'weights': 'uniform'}\n",
+      "Nya resultat för 'KNN Normalization (df2)' sparades i model_results.csv.\n"
+     ]
+    }
+   ],
    "source": [
     "from ml_training_model import train_and_evaluate_models\n",
     "    \n",
