update new files

--- a/Labb/Laboration_1_Medical_Prediction.ipynb
+++ b/Labb/Laboration_1_Medical_Prediction.ipynb
@@ -1087,6 +1087,39 @@
     "    \n",
     "train_and_evaluate_models(X1_train_minmax, X1_val_minmax, X1_test_minmax, X2_train_minmax, X2_val_minmax, X2_test_minmax, y1_train, y1_val, y1_test, y2_train, y2_val, y2_test)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X2_train_minmax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mEnsemble_model_df2\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_ensemble_model\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Anropa funktionen med dina data\u001b[39;00m\n\u001b[0;32m      5\u001b[0m ensemble_model, test_accuracy \u001b[38;5;241m=\u001b[39m create_ensemble_model(\n\u001b[1;32m----> 6\u001b[0m     X_train\u001b[38;5;241m=\u001b[39m\u001b[43mX2_train_minmax\u001b[49m,\n\u001b[0;32m      7\u001b[0m     y_train\u001b[38;5;241m=\u001b[39my2_train,\n\u001b[0;32m      8\u001b[0m     X_val\u001b[38;5;241m=\u001b[39mX2_val_minmax,\n\u001b[0;32m      9\u001b[0m     y_val\u001b[38;5;241m=\u001b[39my2_val,\n\u001b[0;32m     10\u001b[0m     X_test\u001b[38;5;241m=\u001b[39mX2_test_minmax,\n\u001b[0;32m     11\u001b[0m     y_test\u001b[38;5;241m=\u001b[39my2_test,\n\u001b[0;32m     12\u001b[0m     dataset_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdf2\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     13\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X2_train_minmax' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Importera funktionen från Ensemble_model_df2.py\n",
+    "from Ensemble_model_df2 import create_ensemble_model\n",
+    "\n",
+    "# Anropa funktionen med dina data\n",
+    "ensemble_model, test_accuracy = create_ensemble_model(\n",
+    "    X_train=X2_train_minmax,\n",
+    "    y_train=y2_train,\n",
+    "    X_val=X2_val_minmax,\n",
+    "    y_val=y2_val,\n",
+    "    X_test=X2_test_minmax,\n",
+    "    y_test=y2_test,\n",
+    "    dataset_name=\"df2\"\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
