--- a/Lektion/kod_snuttar_labb.ipynb
+++ b/Lektion/kod_snuttar_labb.ipynb
@@ -590,6 +590,42 @@
     "    \n",
     "    return best_model, best_params, evaluation_metrics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # Skapa modeller med de bästa parametrarna från tidigare resultat för df2\n",
+    "    rf_best = RandomForestClassifier(\n",
+    "        max_depth=10, \n",
+    "        min_samples_leaf=4, \n",
+    "        min_samples_split=10, \n",
+    "        n_estimators=30,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    lr_best = LogisticRegression(\n",
+    "        C=100, \n",
+    "        penalty='l2', \n",
+    "        solver='saga',\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    gb_best = GradientBoostingClassifier(\n",
+    "        learning_rate=0.1, \n",
+    "        max_depth=5, \n",
+    "        n_estimators=30,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    knn_best = KNeighborsClassifier(\n",
+    "        n_neighbors=9, \n",
+    "        p=1, \n",
+    "        weights='uniform'\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
